# phabview

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/phabby/: config.py  main.py  notification_builder.py  views.py
src/phabby/adapters/: adapter_factory.py  base_adapter.py  rocketchat.py
src/phabby/phab/: adapter.py  update_manager.py
src/phabview/: config.py  main.py  notification_builder.py  phabview.py
src/phabview/adapters/: adapter_factory.py  base_adapter.py  rocketchat.py
src/phabview/phab/: adapter.py  models.py  update_manager.py
