[project]
name = "phabview"
version = "0.1.0"
description = "A Phabricator bot to notify messaging app users about revision updates."
authors = [
    { name = "evakdev", email = "ivakdad@gmail.com" }
]
dependencies = [
    "Phabricator==0.9.1",
    "rocketchat_API==1.32.0",
    "retry==0.9.2",
    "flask[async]==3.0.3",
    "python-dotenv==1.0.1",
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.1",
    "retry-async>=0.1.4",
]
readme = "README.md"
requires-python = ">= 3.11.9"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/phabview"]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "W", "B", "PL", "C901", "I", "UP", "YTT", "ASYNC", "COM",
    "C4", "T10", "DJ", "EXE", "FA", "ISC", "ICN", "INP", "PIE", "T20", "PYI",
    "PT", "Q", "RSE", "RET", "SLF", "SLOT", "TID", "INT", "ERA", "FLY", "RUF", "S", "FBT", "SIM"]
lint.ignore = ["UP032", "DJ001", "RUF012", "RUF009", "RUF001", "RUF005", "RUF100", "UP007", "T201", "PT009"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 8

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.__pycache__
  |  \.hg
  |  \.mypy_cache
  |  \.tox
  |  \.venv
  |  _build
  |  buck-out
  |  build
  |  dist
  | volumes
)/
'''
[tool.refurb]
lint.ignore = [125]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.11.9"
pythonPlatform = "Linux"
reportGeneralTypeIssues = true
typeCheckingMode = "off"



[tool.vulture]
# Configuration for vulture: https://github.com/jendrikseipp/vulture
# Install in your virtual environment and run:
# python -m vulture | tail -r | less
# The below configuration tries to remove some false positives, but there are
# still many, for example for model properties used only in templates.
# See also:
# https://adamj.eu/tech/2023/07/12/django-clean-up-unused-code-vulture/

paths = ["src"]
sort_by_size = true
